<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.6.RELEASE</version>
        <relativePath/>
	</parent>
	<groupId>ro.pss</groupId>
	<artifactId>holidayforms</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>holidayforms</name>
	<description>Holiday forms</description>
	<repositories>
        <repository>
            <id>vaadin-addons</id>
            <url>http://maven.vaadin.com/vaadin-addons</url>
        </repository>
	</repositories>
	<properties>
        <java.version>11</java.version>
		<vaadin.version>13.0.9</vaadin.version>
		<vaadin.plugin.version>13.0.9</vaadin.plugin.version>
		<vaadin-spring-boot-starter.version>13.0.9</vaadin-spring-boot-starter.version>
		<vaadin-server.version>8.8.5</vaadin-server.version>
		<vaadin-push.version>8.8.5</vaadin-push.version>
		<vaadin-client-compiled.version>8.8.5</vaadin-client-compiled.version>
		<vaadin-themes.version>8.8.5</vaadin-themes.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
		<vaadin.widgetset.mode>local</vaadin.widgetset.mode>
		<maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<version>${vaadin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-server</artifactId>
			<version>${vaadin-server.version}</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-push</artifactId>
			<version>${vaadin-push.version}</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-client-compiled</artifactId>
			<version>${vaadin-client-compiled.version}</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-themes</artifactId>
			<version>${vaadin-themes.version}</version>
		</dependency>
		<dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.appreciated</groupId>
            <artifactId>app-layout-addon</artifactId>
            <version>3.0.0.beta5</version>
        </dependency>
        <dependency>
            <groupId>com.syndybat</groupId>
            <artifactId>chartjs</artifactId>
            <version>1.1.9-Beta</version>
        </dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-spring-boot-starter</artifactId>
			<version>${vaadin-spring-boot-starter.version}</version>
		</dependency>
        <dependency>
            <groupId>be.ceau</groupId>
            <artifactId>chart</artifactId>
            <version>2.5.0</version>
        </dependency>

		<dependency>
			<groupId>org.webjars.bowergithub.roxus</groupId>
			<artifactId>range-datepicker</artifactId>
			<version>0.0.29</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>
		<dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.claspina/confirm-dialog -->
		<dependency>
			<groupId>org.claspina</groupId>
			<artifactId>confirm-dialog</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>2.0.16</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
                    <source>11</source>
                    <target>11</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
